<resources>
    <string name="app_name">ZSSNApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="perfil">Perfil</string>
    <string name="reportes">Reportes</string>
    <string name="salir">Salir</string>
    <string name="nuevo_ususario">Nuevo Ususario</string>
    <string name="nombre">Nombre completo</string>
    <string name="edad">Edad</string>
    <string name="genero">Genero</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="datos_basicos">Datos basicos:</string>
    <string name="inventario">Inventario</string>
    <string name="agua">Agua</string>
    <string name="comida">Comida</string>
    <string name="medicamento">Medicamento</string>
    <string name="municiones">Municiones</string>
    <string name="agregar">Agregar</string>
    <string name="reportar_infectado">REPORTAR INFECTADO</string>
    <string name="informes">Informes</string>
    <string name="sobreviviente">Sobreviviente</string>
    <string name="cambio_ubicaci_n">Cambio ubicación</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="mercado">Mercado</string>


    <string-array name="Generos">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Sin especificar</item>
    </string-array>
</resources>