<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNuevoLaLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d15dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLatitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/d15dp"
                android:text="@string/latitud"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtNuevaLatitud"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d100dp"
                android:textSize="@dimen/d15dp"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLatitud" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLongitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitud"
                android:textSize="@dimen/d15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtNuevaLatitud" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtNuevaLongitud"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d100dp"
                android:textSize="@dimen/d15dp"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLongitud" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCanelar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/d15dp"
        android:layout_marginEnd="32dp"
        android:textSize="@dimen/d15dp"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toStartOf="@+id/btnAceptar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNuevoLaLo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAceptar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/d15dp"
        android:layout_marginEnd="32dp"
        android:textSize="@dimen/d15dp"
        android:text="@string/aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCanelar"
        app:layout_constraintTop_toBottomOf="@+id/cardNuevoLaLo" />


</androidx.constraintlayout.widget.ConstraintLayout>